--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@ $secondary: #a0f669;
 
 html {
 	// overflow-x: hidden;
+	touch-action: manipulation !important;
 }
 body {
 	font-family: $font-primary;
