--- a/css/style.css
+++ b/css/style.css
@@ -5092,6 +5092,7 @@ a.close.disabled {
 .carousel-inner {
   position: relative;
   width: 100%;
+  overflow-y: scroll !important;
   overflow: hidden; }
   .carousel-inner::after {
     display: block;
@@ -8398,7 +8399,9 @@ h1, h2, h3, h4, h5,
       display: none; } }
 
 .owl-carousel {
-  position: relative; }
+  position: relative;
+  overflow-y:scroll !important;
+}
   .owl-carousel .owl-item {
     opacity: .4; }
     .owl-carousel .owl-item.active {
@@ -8498,10 +8501,12 @@ h1, h2, h3, h4, h5,
               width: 100%;
               position: absolute;
               top: 0;
+              overflow-y:scroll !important;
               left: 0;
               right: 0;
               bottom: 0;
               z-index: 1;
+              margin-bottom: 70px !important;
               padding: 1em; } }
           .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
             width: 100%; }
@@ -8586,6 +8591,7 @@ h1, h2, h3, h4, h5,
         .owl-carousel.home-slider .owl-nav .owl-next span:before {
           font-size: 20px;
           margin-top: 7px;
+          margin-bottom: 50px !important;
           color: #000000; }
       .owl-carousel.home-slider .owl-nav .owl-prev {
         top: 0 !important;
@@ -8626,6 +8632,7 @@ h1, h2, h3, h4, h5,
         width: 10px;
         height: 10px;
         margin: 5px;
+        margin-bottom: 50px;
         border-radius: 50%;
         background: rgba(255, 255, 255, 0.4); }
         .owl-carousel.home-slider .owl-dots .owl-dot.active {
